--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.gradle
+
+.DS_Store
+
 # built application files
 *.apk
 *.ap_
@@ -18,3 +22,5 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+
+.idea
